@@ -8099,6 +8099,7 @@
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
 				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
 					"-DHAVE_CELT",
 					"-DHAVE_CELT_API_0_7",
 					"-DMACH_RPC_MACH_SEMA",
@@ -10857,6 +10858,7 @@
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
 				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
 					"-DMACH_RPC_MACH_SEMA",
 					"-DJACK_32_64",
 				);
@@ -11154,6 +11156,7 @@
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
 				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
 					"-DMACH_RPC_MACH_SEMA",
 					"-DJACK_32_64",
 				);
@@ -12318,6 +12321,7 @@
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
 				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
 					"-DMACH_RPC_MACH_SEMA",
 					"-DJACK_32_64",
 				);
@@ -15995,6 +15999,7 @@
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
 				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
 					"-DMACH_RPC_MACH_SEMA",
 					"-DJACK_32_64",
 				);
@@ -16139,6 +16144,7 @@
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
 				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
 					"-DMACH_RPC_MACH_SEMA",
 					"-DJACK_32_64",
 				);
@@ -16279,7 +16285,10 @@
 				MACH_O_TYPE = mh_dylib;
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
-				OTHER_CPLUSPLUSFLAGS = "$(OTHER_CFLAGS)";
+				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
+					"$(OTHER_CFLAGS)",
+				);
 				OTHER_LDFLAGS = (
 					"-framework",
 					Jackservermp,
@@ -16422,7 +16431,10 @@
 				MACH_O_TYPE = mh_dylib;
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
-				OTHER_CPLUSPLUSFLAGS = "$(OTHER_CFLAGS)";
+				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
+					"$(OTHER_CFLAGS)",
+				);
 				OTHER_LDFLAGS = (
 					/opt/local/lib/libsamplerate.a,
 					"-framework",
@@ -16567,6 +16579,7 @@
 				MACOSX_DEPLOYMENT_TARGET = 10.4;
 				OTHER_CFLAGS = "-DJACK_32_64";
 				OTHER_CPLUSPLUSFLAGS = (
+					"-DSERVER_SIDE",
 					"-DMACH_RPC_MACH_SEMA",
 					"-DJACK_32_64",
 				);
